--- a/2024.0415-0419/30903_김지우_0418_6.ipynb
+++ b/2024.0415-0419/30903_김지우_0418_6.ipynb
@@ -50,7 +50,7 @@
     "i = 0\n",
     "print('상반기 월별 수입액 입니다.')\n",
     "while i < 6:\n",
-    "    sum = money[i] + sum  # 리스트의 각 항목을 더해 총 수입을 계산한다.\n",
+    "    sum += money[i]  # 리스트의 각 항목을 더해 총 수입을 계산한다.\n",
     "    i += 1\n",
     "    \n",
     "avg = sum / 6  # 평균을 계산한다.\n",
